--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         text-align: center;
         margin-top: 12px;
         font-weight: 400;
+        font-size: 26px;
     }
     
     hr {
@@ -169,7 +170,8 @@
     <div id="snackbar">CODE COPIED!</div>
 
     <div class="head">
-        <p>Title</p>
+        <p style="margin-bottom: 0;">PT2P</p>
+        <p style="font-size: 14px; margin: 8px 0; margin-top: 4px">「 Plain Text to Python 」</p>
     </div>
 
     <main>
